# gelsight_digit_ros

./: CMakeLists.txt  package.xml  requiremts.py
config/: digit_parms.yaml
launch/: gelsight_digit_node.launch  gelsight_dual_digit_node.launch
scripts/: gelsight_digit_node.py  gelsight_dual_digit_node.py
