<package format="2">
  <name>gelsight_digit_ros</name>
  <version>0.0.1</version>
  <description>ROS node for publishing images from GelSight Digit sensor.</description>

  <maintainer email="tengelbracht@ethz.ch">Tim Engelbracht</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-opencv</exec_depend>
</package>